tests/ui/union/projection-as-union-type-error-2.stderr
error[E0277]: the trait bound `u8: NotImplemented` is not satisfied
  --> $DIR/projection-as-union-type-error-2.rs:18:8
   |
LL |     a: <Foo as Identity>::Identity,
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `NotImplemented` is not implemented for `u8`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/projection-as-union-type-error-2.rs:9:1
   |
LL | trait NotImplemented {}
   | ^^^^^^^^^^^^^^^^^^^^
note: required for `u8` to implement `Identity`
  --> $DIR/projection-as-union-type-error-2.rs:11:25
   |
LL | impl<T: NotImplemented> Identity for T {
   |         --------------  ^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
